# LAB1_NEW

./: Automaton.cpp  Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Expression.cpp  Expression.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PlainParameter.cpp  PlainParameter.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  main.cpp
